# Local_Journal_Buddy

./: .gitignore  README.md  SETUP.md  brain.py  bundle_python.sh  index.html  librarian.py  ocr_corrector.py  ocr_engine.py  package-lock.json  package.json  requirements.txt  test_pipeline.py
.tmp_sovereign/entries/2026-04-14/: typed_2026-04-14.txt
src/: index.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python_scripts/: brain.py  chunker.py  embedding.py  journal_store.py  librarian.py  ocr_corrector.py  ocr_engine.py  paths.py  sovereign_store.py  vision_ocr.py
src-tauri/src/: health.rs  lib.rs  main.rs  ollama_managed.rs  python.rs
