[package]
name = "journal-buddy"
version = "1.0.1"
description = "Local Journal Buddy — 100% offline private mental health companion"
authors = ["you"]
edition = "2021"

[lib]
name = "journal_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "journal-buddy"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
flate2 = "1.0"
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tauri-plugin-shell = "2.0"
walkdir = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rfd = "0.15"
futures-util = "0.3"

[features]
default = ["tauri/rustls-tls"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }
